force-app/main/default/objects/Student_intern__c/Student_intern__c.object-meta.xml
<CustomObject>
    <label>Student_intern</label>
    <nameField>
        <displayFormat>Students-{0}</displayFormat>
        <label>Student Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student_interns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>