force-app/main/default/objects/Student_intern__c/fields/Course_for_student__c.field-meta.xml
<CustomField>
    <fullName>Course_for_student__c</fullName>
    <label>Course for student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>