force-app/main/default/objects/Student_intern__c/fields/Days_To_Upcoming_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Upcoming_Birth_Date__c</fullName>
    <formula>Upcoming_Birth_Date__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Upcoming Birth Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>