force-app/main/default/objects/Student_intern__c/fields/fees__c.field-meta.xml
<CustomField>
    <fullName>fees__c</fullName>
    <label>fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>