force-app/main/default/objects/Student_intern__c/fields/Teacher_Name__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Name__c</fullName>
    <formula>Teacher__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teacher Name</label>
    <type>Text</type>
</CustomField>