force-app/main/default/objects/Student_intern__c/fields/Upcoming_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Birth_Date__c</fullName>
    <label>Upcoming Birth Date</label>
    <type>Date</type>
</CustomField>