force-app/main/default/objects/Student_intern__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>fees__c</columns>
    <columns>Teacher__c</columns>
    <columns>Upcoming_Birth_Date__c</columns>
    <columns>Duration__c</columns>
    <columns>Days_To_Upcoming_Birth_Date__c</columns>
    <columns>Course_for_student__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>